fixed spacings

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -45,10 +45,6 @@ a {
   height: 14%;
 }
 
-.frameworks{
-  margin-left: 60%;
-}
-
 /**************** PROJECTS ****************/
 
 .projects{
